Update 1.6 (Changed the DB to PostgreSQL, Buses page, restructured the app)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Buses and Company"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:wfq3I6gvYgJ7ZpcU3UrG7KRQCrl+ve6rK7YazQ7Hfr0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=buses_and_company
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=dpg-cj23fu6nqql0avvgc4ig-a.frankfurt-postgres.render.com
+DB_PORT=5432
+DB_DATABASE=buses_and_company_db
+DB_USERNAME=buses_and_company_db_user
+DB_PASSWORD=KkHLeVWepfrT6ejr3bgUAbR38Uf1LwWC
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
