--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=dpg-cj23fu6nqql0avvgc4ig-a.frankfurt-postgres.render.com
 DB_PORT=5432
 DB_DATABASE=buses_and_company_db
 DB_USERNAME=buses_and_company_db_user
-DB_PASSWORD=KkHLeVWepfrT6ejr3bgUAbR38Uf1LwWC
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
